# PROJ

./: CMakeLists.txt  Doxyfile  Initializations.cpp  README.md  header.h  main.cpp
.github/workflows/: cmake.yml
Mat/: CMakeLists.txt  functions.h  functions_matrix.cpp  functions_vec.cpp
MyTest/: CMakeLists.txt  myTest.cpp
